Abschnitt 'Nebenprojekte' ergänzt

--- a/main.tex
+++ b/main.tex
@@ -392,7 +392,8 @@ Ideal wäre hier, das TL in den Wochen 6, 5 oder 3 dieser Vorbereitungsphase zu 
 \section{Streckenplanung}
 \label{sec:streckenplaung}
 
-Während einem \tlzh{} ist man frei. Entsprechend den Trainingszielen sollen die Strecken gewählt werden.
+Während einem \tlzh{} ist vergleichsweise ungebunden.
+Entsprechend den Trainingszielen sollen die Strecken gewählt werden.
 
 Ein Punkt, der bei der Planung der Strecke ins Gewicht fällt,
 sind die Unterschiede im Verkehr zwischen Wochentagen und Wochenende.
@@ -404,15 +405,38 @@ Der Vorteil bei einem \tlzh{} ist allerdings, dass das Netz des öffentlichen Ve
 wesentlich dichter ist und das man bei einer nicht reparierbaren Panne oder totaler Erschöpfung
 mitsamt dem \rv{} nutzen kann.
 
-Wenn man ein TL in gewohnter Umgebung durchführt, kommt noch ein weiterer Vorteil zum Tragen.
+\subsection{Streckenplanung frei Schnauze}
+
+Es gibt verschiedene Strategien, um die passende Strecke für das Training zu finden.
+Neben systematischen Such-Methoden (via Strava oder GPS-Datenbanken), die weiter unten
+beschrieben werden, sind manchen das 
+Gefummel mit fremden Strecken heraussuchen, auf das Navi
+laden und dann <<nach Zahlen fahren>> viel zu mühselig und zeitraubend.
+Da kann man ja auch frei ausprobieren. Man fährt ab Wohnort jeweils
+mit einem gewissen Ziel (Distanz, Zeit) und präget sich die ungefähre Strecke vorgängig
+ein, mit Raum für kurzfristige Änderungen. Mit etwas Erfahrung kennt man das
+Streckennetz rund um den Wohnort so gut, dass man auf einer Fahrt beliebig
+<<improvisieren>> kann. Ganz von alleine werden sich dann auch einzelne
+perfekte Lieblingsstrecken herausbilden.
+
+Wenn man ein TL in gewohnter Umgebung durchführt, kommt dieser Vorteil besonders zum Tragen.
 Durch die Ortskenntnisse fällt die Planung einfacher.
 Bergige Strecken für Höhenmeter-Training
 oder flache Etappen für Grundlagentraining sind bekannt und müssen nicht speziell erkundigt oder 
 recherchiert werden.
+
+\subsection{Streckenplanung nach Vorgabe}
+
 Trotzdem kann es sich lohnen, auf ein TL nochmals hinter die Bücher zu gehen.
-Das ausprobieren von neuen Strecken ohne Druck ist nach meiner Erfahrung ein grosser Motivationschub.
+Das ausprobieren von neuen Strecken ohne Druck ist nach meiner Erfahrung ein grosser Motivationsschub.
 
 Eine Liste mit Websites für Planung der Strecken findet sich in Tabelle \ref{tab:gps-websites}.
+Ganz zu empfehlen ist die Website \url{http://www.gpsies.com}. Aus einer offensichtlich
+sehr grossen Datenbank können dank sehr genauen Vorgaben (Startpunkt, Länge, gewünschte Höhenmeter, 
+Streckenbeschaffenheit usw.) gespeicherte Routen herausgesucht und die entsprechenden GPS-Daten
+heruntergeladen und in das entsprechende Navi geladen werden. Mit etwas Glück findet man die
+ideale Strecke, die gut Nachfahrbar ist, ohne sich in die Materie der Bearbeitung von 
+Routen-Daten einarbeiten zu müssen.
 
 \begin{table}
   \centering
@@ -431,7 +455,28 @@ Eine Liste mit Websites für Planung der Strecken findet sich in Tabelle \ref{ta
   \label{tab:gps-websites}
 \end{table}
 
+\subsection{Streckenplanung <<from scratch>>}
 
+Mittels einem geeigneten Programm wie BaseCamp von Garmin lassen sich ganz frei Strecken erstellen,
+die genau auf die eigenen Bedürfnisse zugeschnitten ist.
+Im folgenden das grobe Vorgehen in BaseCamp, das aber weitergehendes Studium des Handbuches oder
+der Onlinehilfe erspart.
+
+\begin{enumerate}
+  \item In BaseCamp werden zunächst \emph{waypoints} angelegt. Diese sind Streckenpunkte wie Start und Ziel
+    und allfällige Zwischenziele.
+  \item Es wird eine neue \emph{route} erstellt. Unterscheidung zwischen \emph{route} und \emph{track} in
+    BaseCamp: eine \emph{route} ist eine berechnete Strecke zwischen verschiedenen \emph{waypoints}.
+    Um diese Strecke zu berechnen, braucht es eine hinterlegte, vektorisierte Karte, die dem Programm
+    sagt, wo die Strecke durch soll -- und nicht einfach die Luftlinie nimmt. Ein Track ist hingegen eine
+    Liste von automatisch, bei einer vorangegangenn Fahrt aufgezeichnenten \emph{waypoints}, die 
+    einfach verbunden wurden. Eine \emph{route} braucht also mindestens zwei \emph{waypoints}, 
+    soll es eine Rundfahrt sein, mindestens drei.
+  \item Man lässt BaseCamp die Strecke erstellen. In der Regel ist dann eine Feinjustierung notwendig:
+    die Art der Fahrt (Rennvelo, Auto), zu vermeidende Strecken (Pässe, Autobahn) um zum
+    gewünschten Resultat zu kommen.
+  \item Die fertige Strecke wird dann mittels USB-Kabel auf das (Garmin-)Gerät geladen.
+\end{enumerate}
 
 \section{Tagesplanung}
 \label{sec:tagesplanung}
@@ -583,15 +628,92 @@ Alles, was hilft, schneller zu regenerieren und sich wieder fit für den nächst
 
 Neben Trainieren, Essen, Schlafen bleibt noch etwas Zeit.
 Diese kann genutzt werden, um Projekte rund um das \rv{} umzusetzen.
+Wie schon erwähnt soll es auch ein Eintauchen in das Thema ermöglichen,
+dass einem neben der gesteigerten Fitness auch persönlich und fachlich weiter bringt.
+Ein Bündel von Ideen finden sich in der Tabelle \ref{tab:liste-nebenprojekte}
+im Folgenden werden einige mögliche Nebenprojekte näher erörtert.
 
-\begin{itemize}
-        \item Einarbeitung ins Tracken von Routen.
-        \item Sport"=Ernährung: Rezepte umsetzen, Riegel selber machen.
-        \item Rennsport"=Geschichte: Bücher zum Thema Radrennsport lesen.
-        \item Werkstatt: Aufbau einer eigenen Radwerkstatt (Schrauberecke).
-                Dazu Literatur studieren und allenfalls eigenes kleines Projekt durchziehen.
-        \item Regelmässig in den entsprechenden \rv"=Foren aktiv werden.
-\end{itemize}
+\subsection{Einarbeitung in das Thema GPS}
+\label{sec:einarbeitung-thema-gps}
+
+GPS-Geräte sind allgegenwärtig: Compuer im Auto, Radcomputer, Fitnessuhr, Smartphone.
+Das Tracken und Loggen von Daten via Strava und anderen Websites ist alltäglich.
+Meistens bringt man das eigene Gerät zum Laufen und ist damit mehr oder weniger
+zufrieden.
+Oft fehlen einam aber fundiertere Kenntnisse für spontan auftretenden Problemen oder Sonderfälle.
+Wie können beispielsweise Touren-Datenbanken wie \url{https://www.gpsies.com} durchsucht
+und die dort gespeicherten GPS-Daten heruntergeladen und auf das Gerät gebracht werden?
+
+\subsection{Sport"=Ernährung}
+\label{sec:sport-ernaehrung}
+
+Ernährung spielt im Leben, der Gesundheit und dem Sport eine wesentliche Rolle.
+Wer mehr Kontrolle über die zugeführte Nahrung haben will, sollte auch lernen,
+sich gesunde und dem Training angepasste Nahrung selber zuzubereiten.
+Auf der anderen Seite verschwindet das Wissen um selber Kochen mit den Grossmüttern
+aus.
+Es gibt aber zahlreiche gute Kochbücher, die sich mit diesem Thema befassen.
+Sich eine entsprechende Sammlung zulegen und systematisch auszuprobieren.
+
+\subsection{Krafttraining}
+\label{sec:krafttraining}
+
+Krafttrining ist als Ergänzung zum Training auf dem Bike wichtig.
+Insbesondere Training der Rumpfmuskulatur (Core), aber auch funktionelles
+Training für wichtige Muskelgruppen unterstützt die Leistungsfähigkeit auf dem Rad
+und beugt muskulären Dysbalancen, Haltungsproblemen (Nacken, Rücken) und
+anderen Schmerzen (Knie) vor. Diesbezüglich gibt es inzwischen gute, lesbare
+und praxisnahe Literatur.
+Im Sinne eines kompletten Trainings sollte ein Grundwissen vorhanden sein.
+Sich in diese Materie vertiefen, ein für sich selbst stimmiges Workout zusammenstellen,
+neue Krafttrainings-Übungen ausprobieren und in den Ruhetagen im TL ausprobieren!
+
+\subsection{Werkstatt-Projekte}
+\label{sec:werkstatt-projekte}
+
+Je besser man sein eigenes \rv{} kennt, desto mehr an Reparaturen kann selber machen.
+Was neben Ersparnis von Zeit, Geld auch mehr Befriedigung bringt.
+Nichts ist schöner als ein perfekt selber zentriertes Laufrad oder eine sauber eingestellte Felgenbremse.
+Auch Demontage, Reinigung und Fetten eines Lagers gehört zu den dankbaren Aufgaben.
+Meist ist der Werkzeug-Aufwand bescheiden und die nötigen Kenntnisse in einschlägigen Werken
+gut dokumentiert.
+
+\subsection{Rennsport-Geschichte}
+\label{sec:rennsport-geschichte}
+
+Biographien oder sogar Autobiographien von Radsportlegenden sind oft inspirirend
+und insbesondere für alle spannend, die ebenfalls mit dem Radsport-Virus befallen sind.
+Daneben gibt es Klassiker der Radsportliteratur zu den wichtigsten Rennen oder legendären Pässe.
+Auch die dunkle Seite des Radsports mit gefallenen Helden (Armstrong) sind spannend zu lesen.
+Wer eher lesefaul ist: es gibt tolle Filme zu diesem Thema, die man kennen sollte.
+Die Erholungszeit während eines \tlzh{} lässt sich dafür prima aufwenden.
+
+
+\begin{table}
+  \centering
+  \begin{tabular}{l}
+    \toprule
+         Einarbeitung in das Erstellen von Routen mit der Software BaseCamp.\\
+         Suchen und Download einer Tour von \url{https://www.gpsies.com}.\\
+         Einarbeitung in das Thema GPS. Unterschied verschiedenen Datenformate.\\
+         In der Handhabung des eigenen GPS-Gerätes mindestens drei neue Funktionen entdecken.\\
+         Sport"=Ernährung: drei Rezepte aus dem Buch <<Tour de France>> (genauer Titel?) umsetzen.\\
+         Die Küche kapern und ein Power-Riegel selber backen.\\
+         Ein knackiges Krafttraining-Workout zusammenstellen.\\
+         Drei neue Krafttraining-Übungen ausprobieren.\\
+         Eine neue Form von Squats ausprobieren.\\
+         Rennsport"=Geschichte: eine Biographien von Eddy Merxc, Antequil, Fausto Coppi lesen.\\
+         Das Buch <<Schweiss der Götter>> lesen.\\
+         Film "Das Programm" von Lynch (?) beschaffen und anschauen.\\
+         Den Film "Stars and Watercarrier" in YouTube suchen und anschauen.\\
+         Werkstatt: Aufbau einer eigenen Radwerkstatt (Schrauberecke).\\
+         Lager der Laufräder auseinandernehmen, reinigen und neu fetten.\\
+         Regelmässig in den entsprechenden \rv"=Foren aktiv werden.\\
+    \bottomrule
+  \end{tabular}
+  \caption{Liste von Ideen für Nebenprojekte während eines TL}
+  \label{tab:liste-nebenprojekte}
+\end{table}
 
 \section{Satellitenwochenende vor und nach dem Lager}
 \label{sec:satellitenwochenende}
